--- a/linkpage.html
+++ b/linkpage.html
@@ -28,19 +28,19 @@
 		<div class="container">
 			<div class="circle-shape">
 				<a
-					href="https://www.instagram.com/_steph.js/"
+					href="https://www.instagram.com/timayie07/"
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<img
 						src="images/pic.jpg"
-						alt="Photo of Steph"
+						alt="My Photo"
 						class="profile-pic"
 					/>
 				</a>
 			</div>
 			<a
-				href="https://www.instagram.com/_steph.js/"
+				href="https://www.instagram.com/timayie07/"
 				target="_blank"
 				rel="noopener noreferrer"
 				class="ig-link"
@@ -49,33 +49,33 @@
 			</a>
 			<div class="link-list">
 				<a
-					href="https://www.etsy.com/shop/StemBabe"
+					href=""
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<div class="link-list-item dark">
-						🛍️ Shop StemBabe - my Etsy store
+						🛍️ Shopee
 					</div>
 				</a>
 				<a
-					href="https://dev.to/stephjs/linear-and-binary-search-in-javascript-4b7h"
+					href=""
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<div class="link-list-item light">
-						📚 Read my DEV.to blog posts
+						📚 Blog Blog
 					</div>
 				</a>
 				<a
-					href="https://www.buymeacoffee.com/stephjs"
+					href=""
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<div class="link-list-item medium">
-						☕ Buy me a coffee
+						☕ I love coffee
 					</div>
 				</a>
-				<a href="mailto:hello@stephjs.com">
+				<a href="">
 					<div class="link-list-item dark">
 						💌 Contact me
 					</div>
@@ -83,7 +83,7 @@
 			</div>
 			<div class="icon-list">
 				<a
-					href="https://github.com/stephjs"
+					href=""
 					target="_blank"
 					rel="noopener noreferrer"
 				>
