--- a/linkpage.html
+++ b/linkpage.html
@@ -45,7 +45,7 @@
 				rel="noopener noreferrer"
 				class="ig-link"
 			>
-				@_steph.js
+				@timayie07
 			</a>
 			<div class="link-list">
 				<a
