--- a/linkpage.html
+++ b/linkpage.html
@@ -53,8 +53,8 @@
 					target="_blank"
 					rel="noopener noreferrer"
 				>
-					<div class="link-list-item dark">
-						🛍️ Shopee
+					<div class="link-list-item light">
+						🛍️ Baking Inspiration
 					</div>
 				</a>
 				<a
@@ -63,7 +63,7 @@
 					rel="noopener noreferrer"
 				>
 					<div class="link-list-item light">
-						📚 Blog Blog
+						📚 Cooking Inspiration
 					</div>
 				</a>
 				<a
@@ -77,7 +77,7 @@
 				</a>
 				<a href="">
 					<div class="link-list-item dark">
-						💌 Contact me
+						💌 Message
 					</div>
 				</a>
 			</div>
