--- a/linkpage.html
+++ b/linkpage.html
@@ -53,7 +53,7 @@
 					target="_blank"
 					rel="noopener noreferrer"
 				>
-					<div class="link-list-item light">
+					<div class="link-list-item lighter">
 						🛍️ Baking Inspiration
 					</div>
 				</a>
@@ -94,13 +94,13 @@
 					/>
 				</a>
 				<a
-					href="https://twitter.com/_stephjs"
+					href=""
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<img
-						src="images/icon-twitter.png"
-						alt="twitter link"
+						src="images/icon-pinterest.png"
+						alt="pinterest link"
 						class="icon-list-img"
 					/>
 				</a>
