--- a/linkpage.html
+++ b/linkpage.html
@@ -100,7 +100,7 @@
 				>
 					<img
 						src="images/icon-pinterest.png"
-						alt="pinterest link"
+						alt="https://www.pinterest.ph/patebm/_saved/"
 						class="icon-list-img"
 					/>
 				</a>
