--- a/linkpage.html
+++ b/linkpage.html
@@ -94,13 +94,13 @@
 					/>
 				</a>
 				<a
-					href=""
+					href="https://www.pinterest.ph/patebm/_saved/"
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<img
 						src="images/icon-pinterest.png"
-						alt="https://www.pinterest.ph/patebm/_saved/"
+						alt="Pinterest"
 						class="icon-list-img"
 					/>
 				</a>
