--- a/linkpage.html
+++ b/linkpage.html
@@ -83,13 +83,24 @@
 			</div>
 			<div class="icon-list">
 				<a
-					href=""
+					href="https://github.com/patebm"
 					target="_blank"
 					rel="noopener noreferrer"
 				>
 					<img
-						src="images/icon-github.png"
+						src="images/iconfinder_Logo_Github_6214513.png"
 						alt="github link"
+						class="icon-list-img"
+					/>
+				</a>
+				<a
+					href="https://www.linkedin.com/in/fatima-medel-178074113/"
+					target="_blank"
+					rel="noopener noreferrer"
+				>
+					<img
+						src="images/iconfinder_Logo_LinkedIn_6214505.png"
+						alt="linkedin link"
 						class="icon-list-img"
 					/>
 				</a>
@@ -99,7 +110,7 @@
 					rel="noopener noreferrer"
 				>
 					<img
-						src="images/icon-pinterest.png"
+						src="images/iconfinder_Logo_Pinterest_pin_6214501.png"
 						alt="Pinterest"
 						class="icon-list-img"
 					/>
