--- a/linkpage.html
+++ b/linkpage.html
@@ -76,7 +76,7 @@
 					</div>
 				</a>
 				<a href="">
-					<div class="link-list-item lighter">
+					<div class="link-list-item bright">
 						💌 Message
 					</div>
 				</a>
