--- a/linkpage.html
+++ b/linkpage.html
@@ -75,7 +75,11 @@
 						☕ I love coffee
 					</div>
 				</a>
-				<a href="">
+				<a
+					href=""
+					target="_blank"
+					rel="noopener noreferrer"
+				>
 					<div class="link-list-item bright">
 						💌 Message
 					</div>
