--- a/linkpage.html
+++ b/linkpage.html
@@ -80,7 +80,7 @@
 					target="_blank"
 					rel="noopener noreferrer"
 				>
-					<div class="link-list-item bright">
+					<div class="link-list-item light">
 						💌 Message
 					</div>
 				</a>
