--- a/linkpage.html
+++ b/linkpage.html
@@ -5,24 +5,11 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+			href=""https://fonts.googleapis.com/css?family=Sofia""
 			rel="stylesheet"
 		/>
 		<link rel="stylesheet" href="pagestyle.css" />
 		<title>Pate Links</title>
-		<script
-			async
-			src="https://www.googletagmanager.com/gtag/js?id=UA-177429414-1"
-		></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag() {
-				dataLayer.push(arguments);
-			}
-			gtag('js', new Date());
-
-			gtag('config', 'UA-177429414-1');
-		</script>
 	</head>
 	<body>
 		<div class="container">
@@ -109,7 +96,7 @@
 					/>
 				</a>
 				<a
-					href="https://www.pinterest.ph/patebm/_saved/"
+					href="https://www.pinterest.ph/patebm"
 					target="_blank"
 					rel="noopener noreferrer"
 				>
@@ -121,6 +108,5 @@
 				</a>
 			</div>
 		</div>
-		<script src="script.js"></script>
 	</body>
 </html>
